objects/CIP_History_Behavioral_Health__c.object
<CustomObject>
    <fields>
        <fullName>BH_Management_Level_Service_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BH Management Level Service Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Product_Hold__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BH Product Hold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BH Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Behavioral Health</relationshipLabel>
        <relationshipName>CIP_History_Behavioral_Health</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corresponding_Package_Code_Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corresponding Package Code/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_SA_Indicator_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH/SA Indicator Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CIP History Behavioral Health (WGS Only)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Behavioral Health Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Behavioral Health</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>